--- a/src/app/button/button.component.html
+++ b/src/app/button/button.component.html
@@ -1,15 +1,36 @@
 <section class="example-section">
   <h2>Primary Button</h2>
-<button class="btn btn--primary">Primary Button</button>
-<button class="btn btn--primary btn--disabled">Primary Button (Disabled)</button>
+  <button class="btn btn--primary" aria-label="Primary Button">Primary Button</button>
+  <button class="btn btn--primary btn--disabled" aria-label="Primary Button Disabled">Primary Button (Disabled)</button>
+
+<pre>
+<code>
+&lt;button class=&quot;btn btn--primary&quot; aria-label=&quot;Primary Button&quot;&gt;Primary Button&lt;/button&gt;
+</code>
+<code>
+&lt;button class=&quot;btn btn--primary btn--disabled&quot; aria-label=&quot;Primary Button Disabled&quot;&gt;Primary Button (Disabled)&lt;/button&gt;
+</code>
+</pre>
 </section>
 
 <section class="example-section">
   <h2>Secondary Button</h2>
-  <button class="btn btn--default">Secondary Button</button>
+  <button class="btn btn--default" aria-label="Secondary Button">Secondary Button</button>
+
+<pre>
+<code>
+&lt;button class=&quot;btn btn--default&quot; aria-label=&quot;Secondary Button&quot;&gt;Secondary Button&lt;/button&gt;
+</code>
+</pre>
 </section>
 
 <section class="example-section">
   <h2>Danger Button</h2>
-  <button class="btn btn--state-danger">Danger Button</button>
+  <button class="btn btn--state-danger" aria-label="Danger Button">Danger Button</button>
+
+<pre>
+<code>
+&lt;button class=&quot;btn btn--state-danger&quot; aria-label=&quot;Danger Button&quot;&gt;Danger Button&lt;/button&gt;
+</code>
+</pre>
 </section>
