--- a/src/app/button/button.component.scss
+++ b/src/app/button/button.component.scss
@@ -23,7 +23,10 @@ $btn-danger: #D04848;
 
 .btn--disabled {
   opacity: .85;
-  pointer-events: none;
+  // pointer-events: none;
+  &:hover {
+    cursor: no-drop;
+  }
 }
 
 .btn--primary {
