--- a/src/app/unordered-list/unordered-list.component.html
+++ b/src/app/unordered-list/unordered-list.component.html
@@ -1,4 +1,4 @@
-<ul [ngClass]="['datatable-list', 'datatable-list--with-header']">
+<ul [ngClass]="['datatable-list', 'datatable-list--with-header']" myTd>
   <li>
     <div [className]="'row'">
       <div [className]="' col-xs '" *ngFor="let label of labels">
