--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -24,4 +24,7 @@ pre {
   box-shadow: 0 1px 12px 0 rgba(0,0,0,.08);
   padding: 1rem;
   margin-bottom: 2rem;
+  & > h2 {
+    margin-top: 0;
+  }
 }
