--- a/src/app/work-cards/work-card.component.scss
+++ b/src/app/work-cards/work-card.component.scss
@@ -6,41 +6,48 @@ $btn-danger: #D04848;
 
 $xp-green: #0EAC87;
 $xp-green-lt: #DDF6EC;
+$status-green: #91D821;
 $dark-gray: #41535D;
 $main-text-gray: #6C7F89;
-
-// try #AA1414
-
-.work-card--xp {
-  border-top-color: $xp-green;
-  .category {
-    color: $xp-green;
-    background-color: $xp-green-lt;
-  }
-}
+$lt-gray: #EBEDF0;
 
 .work-card {
 	background: white;
 	margin-bottom: 2em;
   @include border-radius(7px);
   border-top: 7px solid $dark-gray;
+  @include font-source-roboto($size: .85rem, $color: $main-text-gray)
   padding: 1rem;
   box-shadow: 3px 3px 8px hsl(0, 0%, 80%);
   h2 {
     font-size: 1.25rem;
     color: $dark-gray;
     font-weight: 700;
+    margin: .5rem 0;
+  }
+  .results {
+    font-weight: 700;
+  }
+  .category {
+    font-weight: bold;
   }
 }
 
-// .card a {
-// 	color: black;
-// 	text-decoration: none;
-// }
-
-// .card a:hover {
-// 	box-shadow: 3px 3px 8px hsl(0, 0%, 80%);
-// }
+progress[value] {
+  width: 100%;
+	height: 8px;
+  display: block;
+  appearance: none;
+  &::-webkit-progress-bar {
+    border: 0;
+    border-radius: 4px;
+    background-color: $lt-gray;    //box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25) inset;
+  }
+  &::-webkit-progress-value {
+    border-radius: 4px 0 0 4px;
+    background-color: $status-green;
+  }
+}
 
 .category {
   font-size: .75rem;
@@ -50,20 +57,17 @@ $main-text-gray: #6C7F89;
 }
 
 .work-card-content {
-	padding: 1.4em;
+  margin-bottom: 3rem;
 }
 
-.work-card-content h2 {
-	margin-top: 0;
-	margin-bottom: .5em;
-	font-weight: bold;
+/* Category Design */
+.work-card--xp {
+  border-top-color: $xp-green;
+  .category {
+    color: $xp-green;
+    background-color: $xp-green-lt;
+  }
 }
-
-.work-card-content p {
-	font-size: 80%;
-}
-
-
 
 /* Flexbox stuff */
 
@@ -79,6 +83,7 @@ $main-text-gray: #6C7F89;
         display: flex;
         flex: 0 1 calc(50% - .5em);
         margin-bottom: 1em;
+        flex-direction: column;
     }
 }
 
