Material Card style update

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -49,6 +49,17 @@ table {
 
 /*****   Variables and Mixins *******/
 
+$btn-blue: #004899;
+$btn-lt-gray: #ECECEC;
+$btn-danger: #D04848;
+
+$xp-green: #0EAC87;
+$xp-green-lt: #DDF6EC;
+$status-green: #91D821;
+$dark-gray: #41535D;
+$main-text-gray: #6C7F89;
+$lt-gray: #EBEDF0;
+
 $white: #FFFFFF;
 $sb-light-gray: #ECECEC;
 $lt-gray-page: #F4F6F7;
