--- a/src/app/cards/card.component.scss
+++ b/src/app/cards/card.component.scss
@@ -1,1 +1,21 @@
-@import '../app.component.scss';
+.example-section {
+  display: flex;
+  align-content: center;
+  align-items: center;
+  height: 90px;
+}
+
+.mat-card {
+  margin: .5rem;
+  border-top: 7px solid #898989;
+}
+
+.mat-card-header {
+  flex-direction: row-reverse;
+  justify-content: space-between;
+}
+
+.mat-card-content {
+  display: flex;
+  flex-direction: column;
+}
